infer/tests/codetoanalyze/cpp/errors/lambda/lambda1.cpp
../../frontend/lambda/lambda1.cpp